--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,8 +9,11 @@
 @import 'templates/control'
 @import 'templates/types'
 @import 'templates/design'
-@import 'templates/modal'
 @import 'templates/projects'
+@import 'templates/footer'
+@import 'templates/modal'
+
+
 @import 'media'
 
 
