--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -1,7 +1,7 @@
 .control
     &__section-title
         margin-bottom: 2.2rem
-        margin-top: -30rem 
+        margin-top: -28rem 
     &-title
         margin-bottom: 1rem       
     &__video
@@ -46,7 +46,8 @@
         flex-direction: column
         flex-basis: 30%
     &__input
-        margin-top: -0.4rem    
+        margin-top: -0.4rem 
+        color: $dark   
     &__button
         padding: 1.2857rem 4.785rem
     &__policy
