--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -3,8 +3,7 @@
     display: flex
     flex-direction: column
     justify-content: center
-    align-items: center
-    padding-top: 100px
+    align-items: center    
     background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
     height: 100vh
     color: $light 
@@ -28,16 +27,18 @@
     &__content
         position: relative
         max-width: 47.85rem
-        margin-left: 4.28rem 
+        margin-left: 4.28rem     
     
     &__text
         font-size: 1.57rem 
-        line-height: 131%   
-                
+        line-height: 30px                 
         max-width: 500px 
+        margin: 0
+        margin-bottom: 3.7rem
+        
 
-    &__button
-        margin-top: 1.8rem
+        
+    &__button        
         margin-right: 20px
         min-width: 207px 
         min-height: 51px  
@@ -101,5 +102,6 @@
     font-weight: 400
     &--primary
         color: $primary
-
-    
+.hero__title
+    margin-top: 6rem
+    margin-bottom: 1rem
