--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,10 @@ template {
   border: none;
   border-bottom: 1px solid rgba(54, 54, 54, 0.3);
   font-size: 1.285rem;
-  padding: 0.5rem 0; }
+  padding: 0.5rem 0;
+  color: #fff; }
+  .input.invalid {
+    border-bottom: 1px solid red; }
   .input--light::-webkit-input-placeholder {
     opacity: 1;
     color: #fff; }
@@ -376,7 +379,10 @@ template {
 
 .policy__label {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  font-size: 1.142rem; }
+  .policy__label--center {
+    justify-content: center; }
   .policy__label::before {
     content: '';
     width: 18px;
@@ -531,7 +537,6 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 100px;
   background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
   height: 100vh;
   color: #fff; }
@@ -558,10 +563,11 @@ img {
     margin-left: 4.28rem; }
   .hero__text {
     font-size: 1.57rem;
-    line-height: 131%;
-    max-width: 500px; }
+    line-height: 30px;
+    max-width: 500px;
+    margin: 0;
+    margin-bottom: 3.7rem; }
   .hero__button {
-    margin-top: 1.8rem;
     margin-right: 20px;
     min-width: 207px;
     min-height: 51px; }
@@ -627,9 +633,13 @@ img {
   .title--primary {
     color: #E3B873; }
 
+.hero__title {
+  margin-top: 6rem;
+  margin-bottom: 1rem; }
+
 .control__section-title {
   margin-bottom: 2.2rem;
-  margin-top: -30rem; }
+  margin-top: -28rem; }
 
 .control-title {
   margin-bottom: 1rem; }
@@ -680,7 +690,8 @@ img {
   flex-basis: 30%; }
 
 .control__input {
-  margin-top: -0.4rem; }
+  margin-top: -0.4rem;
+  color: #131313; }
 
 .control__button {
   padding: 1.2857rem 4.785rem; }
@@ -734,70 +745,16 @@ img {
   color: #fff;
   padding: 1.214rem 3rem; }
 
-.design__paragraph {
-  max-width: 740px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  font-size: 20px;
-  line-height: 27px;
-  margin-bottom: 2.85rem; }
-
-.modal {
-  opacity: 0;
-  visibility: hidden;
-  position: fixed;
-  z-index: 1100;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(19, 19, 19, 0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-  .modal--visible {
-    opacity: 1;
-    visibility: visible; }
-  .modal__dialog {
-    position: relative;
-    max-width: 36.36rem;
-    background: #131313 url("../img/bg-line.svg") no-repeat center;
-    padding: 2.357rem 3.5rem 1.928rem;
-    color: #fff; }
-  .modal__close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 28px;
-    height: 28px;
-    background: transparent url("../img/close.svg") no-repeat center;
-    border: none;
-    margin: 12px;
-    cursor: pointer; }
-  .modal__title {
-    font-family: 'Yeseva One', cursive;
-    font-weight: 400;
-    font-size: 1.357rem;
-    line-height: 26px;
+.design {
+  padding-bottom: 20rem; }
+  .design__paragraph {
+    max-width: 740px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
-    margin: 0;
-    margin-bottom: 2rem; }
-  .modal__form {
-    display: flex;
-    flex-direction: column; }
-  .modal__input {
-    margin-bottom: 3.4rem; }
-    .modal__input:last-of-type {
-      margin-bottom: 0.5px; }
-  .modal__policy {
-    margin-bottom: 2.7rem; }
-  .modal__button {
-    align-self: flex-end;
-    padding: 19px 22px;
-    width: 15.2rem; }
+    font-size: 20px;
+    line-height: 27px;
+    margin-bottom: 2.85rem; }
 
 .projects {
   padding-bottom: 30rem; }
@@ -858,6 +815,109 @@ img {
 .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
   margin-right: 1rem; }
 
+.footer {
+  background: #131313 url("../img/footer-bg.jpg") no-repeat center/cover;
+  padding-top: 3rem; }
+  .footer__wrap {
+    background: #131313 url("../img/bgLine.svg") no-repeat center;
+    background-color: #181818;
+    max-width: 63.07rem;
+    margin: auto;
+    margin-top: -20rem;
+    padding: 2.5rem;
+    margin-bottom: 3.714rem; }
+  .footer__title {
+    font-family: 'Yeseva One', cursive;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 1.428rem;
+    text-align: center;
+    margin-bottom: 3.214rem;
+    margin-top: 0; }
+  .footer__form {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 37.142rem;
+    margin: auto;
+    justify-content: space-between; }
+  .footer__input {
+    padding-top: 0.3rem; }
+    .footer__input-group {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 44%;
+      margin-bottom: 3.2rem; }
+      .footer__input-group--full-width {
+        flex-basis: 100%;
+        margin-bottom: 2rem; }
+  .footer__policy {
+    flex-basis: 100%;
+    margin-bottom: 3.6rem; }
+  .footer__button {
+    margin: auto;
+    padding: 1.285rem 4.785rem; }
+  .footer__menu {
+    background-color: #131313;
+    padding: 4.285rem 0; }
+
+.modal {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  z-index: 1100;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(19, 19, 19, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .modal--visible {
+    opacity: 1;
+    visibility: visible; }
+  .modal__dialog {
+    position: relative;
+    max-width: 36.36rem;
+    background: #131313 url("../img/bg-line.svg") no-repeat center;
+    padding: 2.357rem 3.5rem 1.928rem;
+    color: #fff; }
+  .modal__close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 28px;
+    height: 28px;
+    background: transparent url("../img/close.svg") no-repeat center;
+    border: none;
+    margin: 12px;
+    cursor: pointer; }
+  .modal__title {
+    font-family: 'Yeseva One', cursive;
+    font-weight: 400;
+    font-size: 1.357rem;
+    line-height: 26px;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 2rem; }
+  .modal__form {
+    display: flex;
+    flex-direction: column; }
+  .modal__input-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3.4rem; }
+  .modal__input:last-of-type {
+    margin-bottom: 0.5px; }
+  .modal__policy {
+    margin-bottom: 2.7rem; }
+  .modal__button {
+    align-self: flex-end;
+    padding: 19px 22px;
+    width: 15.2rem; }
+
 @media screen and (max-width: 1330px) {
   html {
     font-size: 0.8rem; } }
@@ -870,13 +930,17 @@ img {
   .section-title__heading {
     font-size: 1.7rem; }
   .swiper-slide__heading {
-    font-size: 1rem; }
+    font-size: 14px; }
   .swiper-slide__value {
-    font-size: 1rem; } }
+    font-size: 14px; } }
 
 @media screen and (max-width: 1200px) {
   .nav__item {
     margin-right: 1rem; } }
+
+@media screen and (max-width: 1100px) {
+  .swiper-slide__text {
+    margin-right: 0; } }
 
 @media screen and (max-width: 992px) {
   .nav {
@@ -888,10 +952,20 @@ img {
   .card__title {
     font-size: 1rem; } }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 810px) {
   .row {
     flex-direction: column;
     align-items: center; }
+  .col-50 {
+    width: 100%; }
+    .col-50__image {
+      margin-top: 2.0625rem; }
+  .swiper-slide__text {
+    margin-right: -6rem; }
+    .swiper-slide__text--down {
+      margin-bottom: 0; } }
+
+@media screen and (max-width: 760px) {
   .types__card {
     margin-bottom: 5rem; }
   .card__text {
@@ -899,11 +973,7 @@ img {
   .design__paragraph {
     font-size: 1.5rem; }
   .design__card {
-    margin-bottom: 5rem; }
-  .col-50 {
-    width: 100%; }
-    .col-50__image {
-      margin-top: 2.0625rem; } }
+    margin-bottom: 5rem; } }
 
 @media screen and (max-width: 570px) {
   .contacts__phone {
@@ -915,9 +985,16 @@ img {
   .title {
     font-size: 1.64rem; }
   .hero__content {
-    max-width: 22.86rem; }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    min-height: 100vh;
+    max-width: 22.86rem;
+    padding-top: 7rem; }
   .hero__text {
-    font-size: 1.29rem;
+    font-size: 18px;
+    line-height: 24px;
     margin-bottom: 2.28rem; }
   .hero__button {
     display: block;
@@ -925,6 +1002,8 @@ img {
     margin-bottom: 1.85rem; }
   .hero__scroll-down {
     display: none; }
+  .title {
+    font-size: 23px; }
   .design__paragraph {
     font-size: 15px;
     line-height: 22px; }
@@ -954,19 +1033,71 @@ img {
   .hero__scroll-down {
     display: none; } }
 
+@media screen and (max-width: 515px) {
+  .swiper-slide__text {
+    margin-right: -3rem; } }
+
 @media screen and (max-width: 480px) {
   .control__video {
     max-width: 35rem;
     min-height: 20rem; } }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 410px) {
+  .swiper-slide__text {
+    margin-right: 0; } }
+
+@media screen and (max-width: 375px) {
   .logo__link {
     font-size: 12px; }
   .contacts__phone {
     font-size: 12px; }
   .control__text {
-    font-size: 1rem;
-    line-height: 169.8%; }
+    font-size: 14px;
+    line-height: 24px; }
+    .control__text::before {
+      margin-bottom: 1.4rem; }
   .control__video {
-    max-width: 24.285rem;
-    min-height: 14.786rem; } }
+    margin-top: 40px;
+    margin-bottom: 2.2rem;
+    max-width: 340px;
+    min-height: 207px; }
+  .control-title {
+    font-size: 22px;
+    margin-bottom: 1.5rem; }
+  .control__policy {
+    margin-top: -2.9rem;
+    margin-bottom: 5.6rem; }
+  .control__input {
+    font-size: 18px;
+    line-height: 25px;
+    padding-top: 2px; }
+    .control__input-group {
+      margin-bottom: 5.1rem; }
+  .control__button {
+    max-width: 100%;
+    padding: 20px 124px; }
+  .label {
+    font-size: 15px;
+    line-height: 20px; }
+  .hero__content {
+    max-width: 100%; }
+  .hero__text {
+    margin-bottom: 32px; }
+  .hero__button {
+    padding: 19px 70px;
+    margin-bottom: 26px;
+    width: 338px; }
+  .projects__heading {
+    font-size: 22px;
+    line-height: 30px;
+    margin-bottom: 22px; }
+  .swiper-slide__heading {
+    font-size: 14px;
+    margin-bottom: 11px; }
+  .swiper-slide__value {
+    font-size: 14px; }
+  .col-50__image {
+    margin-top: 3rem;
+    max-height: 30rem; }
+  .swiper-wrapper-image {
+    height: 202px; } }
