--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -30,6 +30,9 @@
    border-bottom: 1px solid rgba(54, 54, 54, 0.3)
    font-size: 1.285rem   
    padding: 0.5rem 0
+   color: $light
+   &.invalid
+      border-bottom: 1px solid red
    &--light
       &::placeholder
          opacity: 1
@@ -45,6 +48,9 @@
    &__label
       display: flex
       align-items: center
+      font-size: 1.142rem
+      &--center
+         justify-content: center
       &::before
          content: ''
          width: 18px
