--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -30,13 +30,13 @@
    border-bottom: 1px solid rgba(54, 54, 54, 0.3)
    font-size: 1.285rem   
    padding: 0.5rem 0
-   color: $light
-   &.invalid
-      border-bottom: 1px solid red
+   color: $light   
    &--light
       &::placeholder
-         opacity: 1
          color: $light
+         // opacity: 1
+   &.invalid
+      border-bottom: 1px solid red
 .policy
    &__checkbox
       opacity: 0
