--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -159,7 +159,9 @@
             font-size: 12px
     .section
         &.controle
-            // background: $dark
+            background: #252525
+            color: $light
+            
     .control
         
         &__text
@@ -185,8 +187,8 @@
             &-group
                 margin-bottom: 5.1rem 
         &__button
-            max-width: 100%
-            padding: 20px 124px  
+            max-width: 340
+            width: 100%  
     .label
         font-size: 15px
         line-height: 20px            
