--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -184,6 +184,8 @@
             font-size: 18px
             line-height: 25px
             padding-top: 2px
+            &::placeholder
+                color: $light 
             &-group
                 margin-bottom: 5.1rem 
         &__button
@@ -191,7 +193,9 @@
             width: 100%  
     .label
         font-size: 15px
-        line-height: 20px            
+        line-height: 20px 
+        color: rgba(255, 255, 255, 0.5)
+          
         
     .hero
         &__content
