--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -47,7 +47,10 @@
         flex-basis: 30%
     &__input
         margin-top: -0.4rem 
-        color: $dark  
+        &::placeholder
+            color: #363636 
+    &__label
+        color: rgba(54, 54, 54, 0.5)
     &__button
         padding: 1.2857rem 4.785rem
     &__policy
