--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -31,8 +31,10 @@
    font-size: 1.285rem   
    padding: 0.5rem 0
    color: $light
+
    &.invalid
-      border-bottom: 1px solid red
+      
+      border-bottom: 1px solid red   
    &--light
       &::placeholder
          opacity: 1
@@ -41,7 +43,7 @@
    &__checkbox
       opacity: 0
       visibility: hidden
-      &:checked +s
+      &:checked + 
          .policy__label
             &::before
                background: $primary url('../img/check.svg') no-repeat center / 0.8rem
@@ -57,6 +59,7 @@
          height: 18px
          border: 1px solid $primary
          border-radius: 1px
+         cursor: pointer
          margin-right: 0.64rem
 .scroll_top
    &__link
@@ -74,4 +77,5 @@
       
       &:hover
          opacity: 1    
-   
+
+
