--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -45,9 +45,12 @@
         display: flex
         flex-direction: column
         flex-basis: 30%
+        
     &__input
+        color: $dark
         margin-top: -0.4rem 
         &::placeholder
+            opacity: 1
             color: #363636 
     &__label
         color: rgba(54, 54, 54, 0.5)
