--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -99,7 +99,7 @@
             margin-bottom: 2.28rem        
         &__button
             display: block
-            min-width: 22.86rem
+            min-width: 21rem
             margin-bottom: 1.85rem
         &__scroll-down
             display: none
@@ -135,6 +135,7 @@
     .hero
         &__scroll-down
             display: none
+        
 @media screen and ( max-width: 515px)
     .swiper-slide
         &__text
@@ -203,9 +204,9 @@
         &__text
             margin-bottom: 32px
         &__button
-            padding: 19px 70px
+            padding: 19px 5rem
             margin-bottom: 26px
-            width: 338px
+            max-width: 338px
     .projects
         &__heading
             font-size: 22px
