--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -12,7 +12,8 @@
     align-items: center
 .logo
     &__link
-        font-size: 1.07rem
+        font-size: 14px
+        font-weight: normal
         text-decoration: none
         color: $primary
         text-transform: uppercase
@@ -38,5 +39,6 @@
     &__phone
        margin-right: 45px 
     &__button
-        font-size: 1.001rem
+        font-size: 13px
+        line-height: 15px
        
