--- a/css/style.css
+++ b/css/style.css
@@ -1119,9 +1119,11 @@ img {
   .hero__text {
     margin-bottom: 32px; }
   .hero__button {
-    padding: 19px 5rem;
+    padding: 19px 0;
     margin-bottom: 26px;
-    max-width: 338px; }
+    max-width: 338px;
+    width: 100%;
+    margin-right: 0; }
   .projects__heading {
     font-size: 22px;
     line-height: 30px;
