--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -204,9 +204,11 @@
         &__text
             margin-bottom: 32px
         &__button
-            padding: 19px 5rem
+            padding: 19px 0
             margin-bottom: 26px
             max-width: 338px
+            width: 100%
+            margin-right: 0
     .projects
         &__heading
             font-size: 22px
