--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -160,9 +160,14 @@
             font-size: 12px
     .section
         &.controle
-            background: #252525
-            color: $light
-            
+            background: $dark
+            color: $light  
+            padding: 0                      
+               
+    .types
+        
+        &__section-title
+                 
     .control
         
         &__text
@@ -190,8 +195,11 @@
             &-group
                 margin-bottom: 5.1rem 
         &__button
+            position: relative
             max-width: 340
             width: 100%  
+            margin-bottom: -20px
+            
     .label
         font-size: 15px
         line-height: 20px 
