--- a/css/style.css
+++ b/css/style.css
@@ -1073,8 +1073,9 @@ img {
   .contacts__phone {
     font-size: 12px; }
   .section.controle {
-    background: #252525;
-    color: #fff; }
+    background: #131313;
+    color: #fff;
+    padding: 0; }
   .control__text {
     font-size: 14px;
     line-height: 24px; }
@@ -1108,8 +1109,10 @@ img {
     .control__input-group {
       margin-bottom: 5.1rem; }
   .control__button {
+    position: relative;
     max-width: 340;
-    width: 100%; }
+    width: 100%;
+    margin-bottom: -20px; }
   .label {
     font-size: 15px;
     line-height: 20px;
