--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -8,7 +8,7 @@
     font-display: wrap;
     }
     @font-face {
-        font-family: 'Futura Demi';
+        font-family: 'Futura DemiC';
         src: 
         url('../fonts/FuturaDemiC.woff') format('woff'),
         url('../fonts/FuturaDemiC.woff2') format('woff2');
