--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -13,11 +13,12 @@
 .logo
     &__link
         font-size: 14px
-        font-weight: normal
+        font-weight: 500
         text-decoration: none
         color: $primary
         text-transform: uppercase
-        margin-right: 5rem   
+        margin-right: 5rem  
+        font-family: "Futura DemiC", sans-serif 
 .nav
     &__item
         text-decoration: none
@@ -41,4 +42,6 @@
     &__button
         font-size: 13px
         line-height: 15px
+        font-weight: 500
+        font-family: "Futura DemiC", sans-serif 
        
