--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -48,6 +48,7 @@
         top: 0
         max-width: 80px
         height: 100%   
+        font-family: "Futura DemiC", sans-serif 
     &__scroll-down
          position: absolute
          display: flex
