--- a/css/style.css
+++ b/css/style.css
@@ -1067,11 +1067,9 @@ img {
     max-width: 35rem;
     min-height: 20rem; } }
 
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 440px) {
   .swiper-slide__text {
-    margin-right: 0; } }
-
-@media screen and (max-width: 375px) {
+    margin-right: 0; }
   .logo__link {
     font-size: 12px; }
   .contacts__phone {
