--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -44,3 +44,7 @@
     &__menu
         background-color: $dark
         padding: 4.285rem 0
+    &__map
+        margin: auto
+        min-height: 465px
+        max-width: 925px
