--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -42,6 +42,7 @@
         max-width: 55rem
         margin: auto
     &__input-group
+        
         display: flex
         flex-direction: column
         flex-basis: 30%
@@ -56,6 +57,7 @@
         color: rgba(54, 54, 54, 0.5)
     &__button
         padding: 1.2857rem 4.785rem
+        height: 50px
     &__policy
         flex-basis: 100%
         margin-top: 1.2rem
