--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -4,8 +4,11 @@
    border-radius: 2px
    text-transform: uppercase
    font-size: 0.93rem
+   font-family: "Futura DemiC", sans-serif 
+   font-weight: 500
    &:hover
       cursor: pointer
+      box-shadow: 0px 5px 15px rgba($primary, 0.2)
    &--primary
       background-color: $primary
       color: $light
