--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -8,7 +8,8 @@
         margin: auto
         margin-top: -20rem
         padding: 2.5rem   
-        margin-bottom: 3.714rem      
+        margin-bottom: 2rem  
+
                 
     &__title
         font-family: 'Yeseva One', cursive
@@ -37,10 +38,34 @@
     &__policy
         flex-basis: 100%
         margin-bottom: 3.6rem
+        margin-left: -11px
     &__button
         margin: auto
-        padding: 1.285rem 4.785rem
-
+        font-size: 15px
+        line-height: 26px
+        padding: 1rem 4.4rem
+    &__info
+        margin: auto
+        display: flex
+        justify-content: center
+        align-items: center  
+        flex-direction: column     
+        max-width: 589px
+        flex-wrap: wrap
+        padding: 0 40px
+    &__text
+        font-family: 'Yeseva One', cursive           
+        font-weight: 500
+        font-size: 20px
+        line-height: 28px
+        text-align: center
+        color: $primary
+        text-transform: uppercase
+        margin-bottom: 26px
+    &__img
+        margin-bottom: 43px
+    &-image
+        margin-right: 10px
     &__menu
         background-color: $dark
         padding: 4.285rem 0
@@ -48,3 +73,8 @@
         margin: auto
         min-height: 465px
         max-width: 925px
+.text
+    &-phone
+        text-decoration: none 
+        color: $primary       
+        pointer: cursor
