--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -6,7 +6,7 @@
     align-items: center    
     background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
     height: 100vh
-    color: $light 
+    color: $light     
     &::before
         content: ''
         position: absolute
@@ -41,7 +41,11 @@
     &__button        
         margin-right: 20px
         min-width: 207px 
-        min-height: 51px  
+        min-height: 51px 
+        font-family: "Futura DemiC", sans-serif        
+        font-weight: 500
+        font-size: 13px
+        line-height: 15px 
     &__instagram
         position: absolute
         left: 0
@@ -88,6 +92,7 @@
         transform: rotate(90deg)
         line-height: 0.8
         font-size: 1.1rem
+          
         &::after
             content: ''
             width: 50px
@@ -105,4 +110,4 @@
         color: $primary
 .hero__title
     margin-top: 6rem
-    margin-bottom: 1rem
+    margin-bottom: 1.05rem
