--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,9 +3,10 @@
    border: none 
    border-radius: 2px
    text-transform: uppercase
-   font-size: 0.93rem
+   font-size: 13px
    font-family: "Futura DemiC", sans-serif 
-   font-weight: 500
+   font-weight: 400
+   line-height: 15px
    &:hover
       cursor: pointer
       box-shadow: 0px 5px 15px rgba($primary, 0.2)
@@ -16,6 +17,7 @@
       transition: box-shadow 0.3s 
       &:hover
          box-shadow: none
+         box-shadow: 0px 5px 15px rgba($primary, 0.5)
    &--outline
       border: 1px solid $light
       background-color: transparent
