--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -26,14 +26,20 @@
    &--primary
       color: $primary
 .label
-   font-size: 1.07rem
+   font-family: "Futura BookC", sans-serif   
+   font-weight: 400
+   font-size: 15px
+   line-height: 20px
    &--light
       color: rgba($light, 0.5)
 .input
    background-color: transparent
    border: none
    border-bottom: 1px solid rgba(54, 54, 54, 0.3)
-   font-size: 1.285rem   
+   font-family: "Futura BookC", sans-serif
+   font-size: 18px
+   line-height: 24px 
+   font-weight: 400  
    padding: 0.5rem 0
    color: $light
 
@@ -56,7 +62,7 @@
    &__label
       display: flex
       align-items: center
-      font-size: 1.142rem
+      font-size: 16px
       &--center
          justify-content: center
       &::before
