--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,5 +1,3 @@
-@media screen and ( max-width:1410px  )
-    
     
 @media screen and ( max-width: 1330px )
     html
@@ -55,7 +53,10 @@
             margin-right: -6rem  
             &--down
                 margin-bottom: 0
-                      
+    .footer
+        &__map
+            min-height: 33rem 
+                    
                 
                 
 @media screen and ( max-width: 760px )
@@ -71,7 +72,13 @@
             font-size: 1.5rem
         &__card
             margin-bottom: 5rem 
-    
+    &.text-phone
+            display: block
+    .control
+        &__input-group
+            flex-basis: 100%
+            margin-bottom: 63px        
+        
        
 
 @media screen and ( max-width: 570px )
@@ -127,9 +134,9 @@
         &__text
             font-size: 1.3rem
             margin-bottom: 26px
-        &__input-group
-            flex-basis: 100%
-            margin-bottom: 63px
+    
+
+        
     .video
         background-size: cover 
         &__play
@@ -139,12 +146,17 @@
     .hero
         &__scroll-down
             display: none
+
         
 @media screen and ( max-width: 515px)
     .swiper-slide
         &__text
             margin-right: -3rem  
-    
+    .footer
+        &__map
+            min-height: 265px
+            
+
 @media screen and ( max-width: 480px )
     .control
         &__video
@@ -152,6 +164,9 @@
             min-height: 20rem       
     
 @media screen and ( max-width: 440px )
+    .butto
+        &:hover
+            box-shadow: none            
     .swiper-slide
         &__text
             margin-right: 0
@@ -169,7 +184,14 @@
         &.controle
             background: $dark
             color: $light  
-            padding: 0        
+            padding: 0  
+        &-title
+            &__word
+                &::after
+                    display: none
+        &.design
+            background: $dark
+            color: $light             
                                       
     .hero                      
         margin-top: -2px
@@ -190,14 +212,15 @@
             margin-bottom: 26px
             max-width: 338px
             width: 100%
-            margin-right: -10px 
+            margin-left: 18px 
             &--outline
                 font-weight: 400
                 font-size: 13px
                 line-height: 15px
    
         &__content
-            max-width: 100%   
+            max-width: 100%  
+            min-height: 100% 
                  
     .control        
         &__text
@@ -216,9 +239,7 @@
         &__policy
             margin-top: -2.9rem
             margin-bottom: 5.6rem
-        &__input
-            font-size: 18px
-            line-height: 25px
+        &__input            
             padding-top: 2px
             &::placeholder
                 color: $light 
@@ -228,16 +249,16 @@
             position: relative
             max-width: 340
             width: 100%  
+            
             margin-bottom: -20px            
             
     .label
-        font-size: 15px
-        line-height: 20px 
         color: rgba(255, 255, 255, 0.5)       
     
     .projects
         padding-top: 18px
         margin-left: -12px
+        
         &__heading
             font-size: 22px
             line-height: 30px
@@ -254,8 +275,30 @@
             max-height: 30rem    
     .swiper-wrapper
         &-image
-            height: 202px  
-    
+            height: 202px
+    .footer 
+        display: flex
+        flex-direction: column
+        &__wrap
+            order: 0
+            padding: 0 
+        &__map 
+            display: flex           
+            order: 1
+        &__info
+            order: 5                   
+        &__input-group            
+            flex-basis: 100%
+            
+        &__title
+            font-size: 20px
+            line-height: 28px
+    .input
+        background-color: transparent
+        border: none
+        border-bottom: 1px solid $light
+             
+               
     
         
     
