--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -39,7 +39,7 @@
         display: flex
         justify-content: space-between
         flex-wrap: wrap
-        max-width: 55rem
+        max-width: 769px
         margin: auto
     &__input-group
         
@@ -67,3 +67,4 @@
     &__play
         margin: auto
         position: relative
+        cursor: pointer
