--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -6,7 +6,7 @@
         background-color: $black
         max-width: 63.07rem
         margin: auto
-        margin-top: -20rem
+        margin-top: -15rem
         padding: 2.5rem   
         margin-bottom: 2rem  
 
@@ -35,6 +35,7 @@
             &--full-width
                 flex-basis: 100%
                 margin-bottom: 2rem
+        
     &__policy
         flex-basis: 100%
         margin-bottom: 3.6rem
@@ -53,6 +54,7 @@
         max-width: 589px
         flex-wrap: wrap
         padding: 0 40px
+        
     &__text
         font-family: 'Yeseva One', cursive           
         font-weight: 500
@@ -73,8 +75,10 @@
         margin: auto
         min-height: 465px
         max-width: 925px
+        margin-bottom: 66px
 .text
     &-phone
         text-decoration: none 
         color: $primary       
         pointer: cursor
+    
