--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -277,19 +277,17 @@
         &-image
             height: 202px
     .footer 
-        display: flex
-        flex-direction: column
-        &__wrap
-            order: 0
-            padding: 0 
-        &__map 
-            display: flex           
-            order: 1
+        background: $dark 
+        &__content            
+            display: flex
+            flex-direction: column  
         &__info
-            order: 5                   
+            order: 1  
+                    
         &__input-group            
             flex-basis: 100%
-            
+        &__menu
+            display: none   
         &__title
             font-size: 20px
             line-height: 28px
